--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Grandmothers -- Germany -- Fiction'
 - !lcc 'PT'
+- GITenberg
 title: Trotzkopf als Grossmutter
 url: http://www.gutenberg.org/ebooks/39619
